prod_snapshot_2015-09-24_1030/objects/USCP_Invoice_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Adjustment_Details__c</fullName>
        <label>Adjustment Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjustment_Reason__c</fullName>
        <label>Adjustment Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Advertiser Name</description>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corp_Partner_Code__c</fullName>
        <label>Corp Partner Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_of_Service_Date__c</fullName>
        <label>End of Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ILI_Type__c</fullName>
        <label>ILI Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Date__c</fullName>
        <label>Live Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Management_Fee__c</fullName>
        <label>Management Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Media_Budget__c</fullName>
        <description>sometimes incorrectly called Spend</description>
        <label>Media Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Media_Partner__c</fullName>
        <label>Media Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLI_ID__c</fullName>
        <description>OLI Id</description>
        <label>OLI ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Charge__c</fullName>
        <label>Total Monthly Charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wholesale_Fee__c</fullName>
        <label>Wholesale Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>USCP Invoice Snapshot</label>
    <nameField>
        <displayFormat>USCPInvoice-{0000}</displayFormat>
        <label>USCP Invoice Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>USCP Invoice Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>